--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Parcial 1 - Santiago Mayaud</h1>
+
+    <h3><a class="nav-link text-dark" asp-area="" asp-controller="ModelKit" asp-action="Index">Si todo salió bien, hacer click en estas palabras debería llevarme a una lista de modelos.</a></h3>
+    <h3>En teoría, hacer click en la imagen de abajo también:</h3>
+    <a class="nav-link text-dark" asp-area="" asp-controller="ModelKit" asp-action="Index"><img src="https://emsw9w6wsq2.exactdn.com/wp-content/uploads/2021/06/sprue-pile.jpg?strip=all&lossy=1&resize=800%2C534&ssl=1"></a>
 </div>
