--- a/Views/ModelKit/Create.cshtml
+++ b/Views/ModelKit/Create.cshtml
@@ -20,8 +20,8 @@
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
                 <select asp-for="Type" class="form-control">
-                    <option value="0">AvionMilitar</option>
-                    <option value="1">AvionComercial</option>
+                    <option value="0">Avion Militar</option>
+                    <option value="1">Avion Comercial</option>
                     <option value="2">Helicoptero</option>
                     <option value="3">Tanque</option>
                     <option value="4">Naval</option>
@@ -29,6 +29,11 @@
                     <option value="6">Otros</option>
                 </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ModelMaker" class="control-label"></label>
+                <input asp-for="ModelMaker" class="form-control" />
+                <span asp-validation-for="ModelMaker" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Pieces" class="control-label"></label>
@@ -52,5 +57,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
