--- a/Views/ModelKit/Delete.cshtml
+++ b/Views/ModelKit/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar Maqueta</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Epa, seguro que queres eliminar una maqueta?</h3>
 <div>
-    <h4>ModelKit</h4>
+    <h4>Maquetas:</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
