--- a/Views/ModelKit/Details.cshtml
+++ b/Views/ModelKit/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles de las Maquetas</h1>
 
 <div>
-    <h4>ModelKit</h4>
+    <h4>Maquetas</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -21,6 +21,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Type)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ModelMaker)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ModelMaker)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Pieces)
