--- a/Views/ModelKit/Edit.cshtml
+++ b/Views/ModelKit/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar Maquetas</h1>
 
-<h4>ModelKit</h4>
+<h4>Maquetas</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,6 +17,11 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ModelMaker" class="control-label"></label>
+                <input asp-for="ModelMaker" class="form-control" />
+                <span asp-validation-for="Pieces" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Pieces" class="control-label"></label>
@@ -40,5 +45,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
