--- a/Views/ModelMaker/Create.cshtml
+++ b/Views/ModelMaker/Create.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Agregar Nueva Marca de Modelos</h1>
 
-<h4>ModelMaker</h4>
+<h4>Datos de la Marca</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,6 +17,11 @@
                 <label asp-for="BrandName" class="control-label"></label>
                 <input asp-for="BrandName" class="form-control" />
                 <span asp-validation-for="BrandName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Country" class="control-label"></label>
+                <input asp-for="Country" class="form-control" />
+                <span asp-validation-for="Country" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -30,5 +35,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
