--- a/Views/ModelMaker/Details.cshtml
+++ b/Views/ModelMaker/Details.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles de los Fabricantes</h1>
 
 <div>
-    <h4>ModelMaker</h4>
+    <h4>Fabricantes</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -16,6 +16,14 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.BrandName)
+        </dd>
+    </dl>
+        <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Country)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Country)
         </dd>
     </dl>
 </div>
