--- a/Views/ModelMaker/Index.cshtml
+++ b/Views/ModelMaker/Index.cshtml
@@ -1,5 +1,5 @@
 @using Parcial1SM.ViewModels;
-@model IEnumerable<Parcial1SM.Models.ModelMaker>
+@model ModelMakerViewModel;
 
 @{
     ViewData["Title"] = "Index";
@@ -14,29 +14,30 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.BrandName)
+                @Html.DisplayNameFor(model => model.ModelMakers[0].BrandName)
             </th>
-                        <th>
-                @Html.DisplayNameFor(model => model.Country)
+            <th>
+                @Html.DisplayNameFor(model => model.ModelMakers[0].Country)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.BrandName)
-            </td>
-                        <td>
-                @Html.DisplayFor(modelItem => item.Country)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.ModelMakers)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BrandName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Country)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
